--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 body {
     margin: 0;
+    background-color: #f5f5f5;
 }
 
 .contenedor-header {
-    background-color: blue;
+    background-color: #f5f5f5;
     display: flex;
     justify-content: space-between;
 }
 
 .contenedor-header > div {
-    background-color: violet;
+    background-color: #f5f5f5;
     border: 1px solid black;
     margin: 20px;
     flex-basis: 120px;
 }
 
 .contenedor-imagen-principal {
-    height: 230px;
-    background-color: red;
+    height: 300px;
+    background-color: #fff;
+    border: 3px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,42 +34,58 @@ body {
 .seccion-principal {
     height: 100%;
     width: 1100px;
-    background-color: goldenrod;
+    background-color: #f5f5f5;
+    border: 1px solid black;
     display: flex;
     justify-content: center;
 }
 
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .seccion-aside {
-    background-color: violet;
+    background-color: #f5f5f5;
     border: 1px solid black;
-    flex-basis: 200px;
-    height: 650px;
     display: flex;
     flex-direction: column;
 }
 
 .seccion-productos {
-    background-color: violet;
+    background-color: #f5f5f5;
     border: 1px solid black;
     flex-basis: 800px;
-    height: 1300px;
 }
 
 .contenedor-botones-aside-1 {
     display: flex;
     justify-content: space-between;
-    background-color: greenyellow;
+    background-color: #f5f5f5;
     margin: 5px;
     margin: 5px;
 }
 
-.filtro, .limpiar {
+.filtro {
     border: 1px solid black;
 }
 
+button, input, label {
+    cursor: pointer;
+}
+
 .contenedor-botones-aside-2 {
-    background-color: greenyellow;
+    background-color: #f5f5f5;
     margin: 5px;
+}
+
+.buscar-productos {
+    cursor: text;
+    border: none;
+    padding: 13px;
+    border-bottom: 2px solid black;
+    background-color: #f5f5f5;
 }
 
 .contenedor-busqueda {
@@ -77,17 +95,21 @@ body {
 }
 
 .contenedor-botones-aside-3 {
-    background-color: greenyellow;
-    margin: 5px;
+    background-color: #f5f5f5;
+    margin: 5px;    
+}
+
+.fa-star {
+    color: #fbc02d;
 }
 
 .contenedor-botones-aside-4 {
-    background-color: greenyellow;
+    background-color: #f5f5f5;
     margin: 5px;
 }
 
 .contenedor-barra-principal-productos {
-    background-color: lightblue;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
 }
@@ -103,15 +125,14 @@ body {
 }
 
 .contenedor-seccion-productos > div {
-    background-color: chartreuse;
-    border: 1px solid black;
+    background-color: #fff;
     height: 300px;
     width: 200px;
     margin: 5px;
 }
 
 footer {
-    background-color: chartreuse;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
