--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .seccion-principal {
     height: 100%;
-    width: 1100px;
+    width: auto;
     background-color: #f5f5f5;
     border: 1px solid black;
     display: flex;
@@ -56,7 +56,7 @@ body {
 .seccion-productos {
     background-color: #f5f5f5;
     border: 1px solid black;
-    flex-basis: 800px;
+    flex-basis: 1000px;
 }
 
 .contenedor-botones-aside-1 {
@@ -80,7 +80,7 @@ button, input, label {
     margin: 5px;
 }
 
-.buscar-productos {
+#buscar-productos {
     cursor: text;
     border: none;
     padding: 13px;
@@ -126,10 +126,32 @@ button, input, label {
 
 .contenedor-seccion-productos > div {
     background-color: #fff;
-    height: 300px;
-    width: 200px;
     margin: 5px;
+    height: 100%;
+    width: auto;
 }
+
+.container {
+    flex: 3;
+    display: flex;
+  }
+
+.product {
+    background-color: #fff;
+    padding: 30px 25px;
+    text-align: center;
+    margin: 10px;
+  }
+  
+  .product-img-container {
+    height: 250px;
+  }
+  
+  .product-img {
+    height: 100%;
+    margin: 0 auto;
+  }
+  
 
 footer {
     background-color: #fff;
