--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@900&family=Overlock&family=Quicksand&family=Thasadith:wght@700&display=swap');
+
 body {
     margin: 0;
     background-color: #f5f5f5;
-   
+    font-family: "Quicksand";
 }
 
 .contenedor-header {
     background-color: #f5f5f5;
     display: flex;
     justify-content: space-between;
+    font-size: 25px;
+}
+
+#icono-header {
+    font-size: 25px;
 }
 
 .contenedor-header > div {
     background-color: #f5f5f5;
     border: 1px solid black;
-    margin: 20px;
-    flex-basis: 120px;
+    flex-basis: 150px;
 }
 
 .contenedor-imagen-principal {
@@ -131,6 +138,10 @@ button, input, label {
     margin: 10px;
 }
 
+.producto:hover {
+    box-shadow: 0 0px 10px 0 rgba(185, 182, 182, 0.521),0 6px 10px 0 rgba(146, 144, 144, 0.19)
+  }
+
 
 .product-img-container {
     height: 250px;
@@ -141,13 +152,65 @@ button, input, label {
     margin: 0 auto;
 }
   
+/* Comienza footer */
 
-footer {
+/* footer {
     background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 120px;
+    margin: ;
+}  */
+ 
+footer {
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#fff;
+    font-family: 'Quicksand';
+}
+
+ul {
+    padding: 0;
+}
+
+.contenedor-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.links-redes {
+    display: flex;
+}
+
+.ícono-redes {
+    display: block;
+    margin: 8px;
+}
+
+.fab:hover {
+    font-size: 20px;
+}
+
+.fa-github, .fa-linkedin, .fa-envelope {
+    font-size: 17px;
+    color: rgba(54, 53, 53, 0.19);
+}
+
+.fa-paw {
+    color: #fb3570c9;
+    font-size: 14px;
+}
+
+.última-frase-footer {
+    font-size: 16px;
+    text-align: center;
+    margin: 0;
 }
 
 .no-mostrar {
