--- a/style.css
+++ b/style.css
@@ -11,26 +11,39 @@ body {
     background-color: #f5f5f5;
     display: flex;
     justify-content: space-between;
-    font-size: 25px;
+}
+
+#contenedor-icono-header {
+    margin-left: 150px;
+}
+
+#contenedor-boton-header {
+    margin-right: 150px;
 }
 
 #icono-header {
-    font-size: 25px;
+    font-size: 23px;
 }
 
 .contenedor-header > div {
     background-color: #f5f5f5;
-    border: 1px solid black;
     flex-basis: 150px;
 }
 
 .contenedor-imagen-principal {
     height: 300px;
     background-color: #fff;
-    border: 3px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(img/Untitled\ design\ \(1\).png);
+    flex: 1;
+}
+
+.texto-imagen-principal {
+    color: whitesmoke;
+    font-size: 35px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .contenedor-seccion-principal {
@@ -145,23 +158,25 @@ button, input, label {
 
 .product-img-container {
     height: 250px;
+    width: 250px;
+    overflow: hidden;
 }
   
 .product-img {
     height: 100%;
     margin: 0 auto;
 }
+
+.product-img:hover {
+    -webkit-transform:scale(1.2);
+    -moz-transform:scale(1.2);
+    -ms-transform:scale(1.2);
+    -o-transform:scale(1.2);
+    transform:scale(1.2);
+    opacity: .70;
+}
   
 /* Comienza footer */
-
-/* footer {
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    margin: ;
-}  */
  
 footer {
     margin-top: 70px;
