--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ button, input, label {
     padding: 13px;
     border-bottom: 2px solid black;
     background-color: #f5f5f5;
+    font-family: "Quicksand";
 }
 
 .contenedor-busqueda {
@@ -132,10 +133,33 @@ button, input, label {
     background-color: #fff;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    width: 950px;
 }
 
-.contenedor-botones-barra-principal-productos {
+.view-buttons {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+}
+
+.view-btn {
+    font-size: 20px;
+    color: #000;
+    padding: 0;
+    margin-left: 15px;
+}
+button {
+    transition: 0.2s;
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+}
+
+.fa, .fas {
+    font-weight: 900;
 }
 
 .contenedor-seccion-productos {
