--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ button {
   
 .product-img {
     height: 100%;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .product-img:hover {
@@ -198,6 +198,38 @@ button {
     -o-transform:scale(1.2);
     transform:scale(1.2);
     opacity: .70;
+}
+
+.product-name, .product-price {
+    margin: 5px;
+}
+
+
+.add-to-cart-btn {
+    width: 100%;
+    height: 40px;
+}
+
+.button-default {
+    background-color: rgba(248, 248, 248, 0.897);
+    color: black;
+}
+
+.button {
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-top: 10px;
+    font-family: "Quicksand";
+}
+
+.button:hover {
+    background-color: #e9e7e7;
 }
   
 /* Comienza footer */
