--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 .contenedor-imagen-principal {
     height: 300px;
-    background-color: #fff;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +55,6 @@ body {
 .seccion-principal {
     display: flex;
     flex-grow: 1;
-    width: 100%;
     max-width: 1400px;
     justify-content: center;
 }
@@ -72,11 +71,12 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 270px;
+    margin-top: 50px;
 }
 
 .seccion-productos {
     background-color: #f5f5f5;
-    flex-basis: 1000px;
+    width: 1000px;
 }
 
 .contenedor-botones-aside-1 {
@@ -84,12 +84,12 @@ body {
     justify-content: space-between;
     background-color: #f5f5f5;
     margin: 5px;
-    margin: 5px;
 }
 
-.filtro {
-    border: 1px solid black;
+.filters-clear-btn {
+    padding: 0;
 }
+
 
 button, input, label {
     cursor: pointer;
@@ -134,9 +134,10 @@ button, input, label {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
-    width: 950px;
+    margin: 50px 10px 10px;
+    padding: 20px 30px;
 }
+
 
 .view-buttons {
     display: flex;
@@ -166,11 +167,12 @@ button {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 0;
 }
 
 .producto {
    background-color: #fff;
-    padding: 30px 25px;
+    padding: 30px;
     text-align: center;
     margin: 10px;
 }
