--- a/style.css
+++ b/style.css
@@ -112,6 +112,14 @@ button, input, label {
     margin: 5px;
 }
 
+.fas.fa-search {
+    position: relative;
+    right: 25px;
+    top: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
 .contenedor-botones-aside-3 {
     background-color: #f5f5f5;
     margin: 5px;    
