--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
     margin: 0;
     background-color: #f5f5f5;
     font-family: "Quicksand";
-    height: 100%;
+    width: 100vw;
+    height: 200vh;
 }
 
 .contenedor-header {
@@ -18,9 +19,6 @@ body {
     margin-left: 150px;
 }
 
-#contenedor-boton-header {
-    margin-right: 150px;
-}
 
 #icono-header {
     font-size: 23px;
@@ -54,6 +52,31 @@ body {
     width: 100%;
     max-width: 1300px;
     justify-content: center;
+}
+
+.overlay {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+}
+
+#abrir-carrito {
+    margin-right: 150px;
+}
+
+.carrito {
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    padding: 40px 20px;
+    right: 0;
+    top: 0;
+    background-color: #fff;
+    color: black;
+    font-family: "Quicksand";
+    position: fixed;
 }
 
 .formulario {
