--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
 }
 
 .contenedor-header > div {
-    background-color: #f5f5f5;
     flex-basis: 150px;
 }
 
@@ -55,11 +54,12 @@ body {
 }
 
 .overlay {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 #abrir-carrito {
