--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-family: "Quicksand";
     width: 100vw;
     height: 200vh;
+ 
 }
 
 .contenedor-header {
@@ -29,8 +30,9 @@ body {
 }
 
 .contenedor-imagen-principal {
+    width: 100%;
     height: 300px;
-    width: auto;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,6 +85,9 @@ body {
     color: black;
     font-family: "Quicksand";
     position: fixed;
+    transform: translate(100%);
+    z-index: 5000;
+    transition: 0.5s;
 }
 
 .formulario {
@@ -234,6 +239,7 @@ button {
     -o-transform:scale(1.2);
     transform:scale(1.2);
     opacity: .70;
+    transition: 0.5s;
 }
 
 .product-name, .product-price {
@@ -327,6 +333,15 @@ ul {
 
 .no-mostrar {
     display: none;
+}
+
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.mostrar-carrito {
+    transform: translate(0);
 }
 
 
