--- a/style.css
+++ b/style.css
@@ -95,6 +95,103 @@ body {
     transition: 0.5s;
 }
 
+.fa-times {
+    font-size: 25px;
+}
+
+.productos-carrito-1-y-2 {
+    overflow: scroll;
+}
+
+.carrito-cruz {
+    display: flex;
+    justify-content: space-between;
+}
+
+.titulo-carrito {
+    margin: 0;
+}
+
+.imagen-producto-carrito {
+    width: 100%;
+}
+
+.contenedor-imagen-producto-carrito {
+    height: 150px;
+    width: 150px;
+    margin-right: 40px;
+}
+
+.producto-carrito {
+    display: flex;  
+}
+
+.linea-divisoria {
+    border-bottom: 1px solid #dedede;
+}
+
+.info-producto-carrito {
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
+
+.info-productos-carrito {
+    flex: 1;
+}
+
+.cantidad-producto-carrito {
+    width: 50px;
+    height: 30px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.info-producto-carrito-2 {
+    display: flex;
+    flex: 1;
+    align-items: center;
+}
+
+.tacho-carrito {
+    font-size: 20px;
+    color: red;
+}
+
+.producto-carrito-2 {
+    margin-top: 20px;
+}
+
+.subtotal {
+    margin-top: 50px;
+    font-size: 22px;
+}
+
+#button-success {
+    background-color: rgb(42, 170, 42);
+    color: #fff;
+    width: 100%;
+    min-height: 50px;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
+#button-success:hover {
+    background-color: rgb(30, 121, 30);
+}
+
+#button-danger-outlined {
+    border: 1px solid red;
+    color: red;
+    background-color: #fff;
+    width: 100%;
+    min-height: 50px;
+}
+
+#button-danger-outlined:hover {
+    background-color: red;
+    color:#fff;
+}
 
 .formulario {
     display: flex;
