--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
     font-size: 20px;
 }
 
-#button-success {
+#boton-comprar {
     background-color: rgb(42, 170, 42);
     color: #fff;
     width: 100%;
@@ -185,7 +185,7 @@ body {
     margin-top: 30px;
 }
 
-#button-success:hover {
+#boton-comprar:hover {
     background-color: rgb(30, 121, 30);
 }
 
@@ -201,6 +201,127 @@ body {
     background-color: red;
     color:#fff;
 }
+
+.overlay-cuadro-comprar {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+}
+
+.cuadro-comprar {
+    background-color: #fff;
+    padding: 40px;
+    max-width: 800px;
+    position: absolute;
+    left: 15%;
+    right: 15%;
+    width: 100%%;
+    background: #fff;
+    z-index:1002;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: scroll;
+}
+
+.linea-divisoria-cuadro-comprar {
+    border-bottom: 1px solid #dedede;
+    max-width: 400px;
+}
+
+.input-ingresar-datos-personales-2 {
+    margin-bottom: 60px;
+}
+
+.titulo-cuadro-comprar {
+    margin: 0;
+}
+
+#ingresar-nombre-completo, #ingresar-email {
+    cursor: text;
+    border: none;
+    border-bottom: 1px solid black;
+    font-family: "Quicksand";
+    height: 35px;
+    line-height: 35px;
+    width: 100%;
+    max-width: 250px;
+}
+
+.contenedor-datos-personales {
+    min-width: 300px;
+}
+
+.contenedor-botones-opciones-pago {
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedor-datos-personales-resumen {
+    display: flex;
+    justify-content: space-between;
+}
+
+.resumen {
+    background: #f5f5f5;
+    border-radius: 5px;
+    min-width: 300px;
+    padding: 20px;
+    height: 100%;
+}
+
+.boton-enviar-formulario {
+    background-color: rgb(42, 170, 42);
+    color: #fff;
+    width: 200px;
+    min-height: 50px;
+    border: 0;
+    border-radius: 5px;
+    font-family: "Quicksand";
+    margin-left: 20px;
+}
+
+.boton-enviar-formulario:hover {
+    background-color: rgb(30, 121, 30);
+}
+
+.botones-footer-cuadro-comprar {
+    padding: 40px 10px 30px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.contenedor-subtotal, .contenedor-total, .contenedor-recargo, .contenedor-delivery, .contenedor-giftcard {
+    display: flex;
+    justify-content: space-between;
+    line-height: 1.8;
+}
+
+.giftcard-opciones-pago, .giftcard-precio-opciones-pago {
+    color: rgb(56, 187, 56);
+    font-weight: 600;
+}
+
+.recargo-opciones-pago, .recargo-precio-opciones-pago, .delivery-opciones-pago, .delivery-precio-opciones-pago {
+    color: red;
+    font-weight: 600;
+}
+
+.subtotal-opciones-pago, .subtotal-precio-opciones-pago{
+    font-weight: 600;
+}
+
+.total-opciones-pago, .total-precio-opciones-pago {
+    font-size: 28px;
+    font-weight: 800;
+}
+    
 
 .cuadro-vaciar {
     background-color: #fff;
@@ -534,7 +655,7 @@ ul {
     transform: translate(0);
 }
 
-.mostrar-cuadro-vaciar {
+.mostrar-cuadros {
     display: flex;
 }
 
