--- a/style.css
+++ b/style.css
@@ -214,11 +214,11 @@ body {
 .cuadro-comprar {
     background-color: #fff;
     padding: 40px;
-    max-width: 800px;
+    max-width: 700px;
     position: absolute;
-    left: 15%;
-    right: 15%;
-    width: 100%%;
+    left: 25%;
+    right: 25%;
+    width: 100%;
     background: #fff;
     z-index:1002;
     overflow: auto;
@@ -256,22 +256,33 @@ body {
     min-width: 300px;
 }
 
+.resumen-y-contenedor-datos-personales-y-pago {
+    display: flex;
+    min-height: 300px;
+}
+
 .contenedor-botones-opciones-pago {
     display: flex;
     flex-direction: column;
 }
 
-.contenedor-datos-personales-resumen {
+.contenedor-datos-personales-y-pago {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+}
+
+.contenedor-recargos-subtotales {
+    min-height: 250px;
 }
 
 .resumen {
     background: #f5f5f5;
     border-radius: 5px;
     min-width: 300px;
+    min-height: 400px;
     padding: 20px;
-    height: 100%;
+    margin: 20px;
 }
 
 .boton-enviar-formulario {
@@ -297,18 +308,27 @@ body {
     align-items: flex-end;
 }
 
+
+
+
+
 .contenedor-subtotal, .contenedor-total, .contenedor-recargo, .contenedor-delivery, .contenedor-giftcard {
     display: flex;
     justify-content: space-between;
     line-height: 1.8;
 }
 
+
 .giftcard-opciones-pago, .giftcard-precio-opciones-pago {
     color: rgb(56, 187, 56);
     font-weight: 600;
 }
 
-.recargo-opciones-pago, .recargo-precio-opciones-pago, .delivery-opciones-pago, .delivery-precio-opciones-pago {
+.delivery-opciones-pago, .delivery-precio-opciones-pago {
+    font-weight: 600;
+}
+
+.recargo-opciones-pago, .recargo-precio-opciones-pago {
     color: red;
     font-weight: 600;
 }
