--- a/style.css
+++ b/style.css
@@ -805,6 +805,20 @@ ul {
         width: 60%;
     }
 
+    .cuadro-comprar {
+        background-color: #fff;
+        padding: 40px;
+        position: absolute;
+        width: 100vw;
+        background: #fff;
+        z-index:1002;
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        overflow: scroll;
+    }
+
     .mostrar-seccion-aside-responsive {
         transform: translate(0);
     }
