--- a/style.css
+++ b/style.css
@@ -802,7 +802,15 @@ ul {
     }
 
     .cuadro-vaciar {
-        width: 60%;
+        width: 100vw;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        top: 0;
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .cuadro-comprar {
@@ -820,6 +828,10 @@ ul {
 }
 
 
-@media (max-width: 900px) and (min-width: 650px) {
-
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .cuadro-comprar {
+        left: 0;
+        right: 0;
+        max-width: 100%;
+    }
 }
