--- a/style.css
+++ b/style.css
@@ -834,4 +834,26 @@ ul {
         right: 0;
         max-width: 100%;
     }
+
+    .cuadro-vaciar {
+        width: 100%;
+        height: 100%;
+        max-width: 400px;
+        padding: 40px 20px;
+        right: 0;
+        top: 0;
+        background-color: #fff;
+        color: black;
+        font-family: "Quicksand";
+        position: fixed;
+        transform: translate(10%);
+        z-index: 5000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .boton-gris-cuadro-vaciar, .boton-rojo-cuadro-vaciar {
+        width: 150px;
+    }
 }
