--- a/style.css
+++ b/style.css
@@ -699,7 +699,7 @@ ul {
 /* Responsive */
 
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
 
     .seccion-aside {
         display: none;
@@ -857,7 +857,75 @@ ul {
         align-items: center;
     }
 
+    .overlay-seccion-aside-responsive {
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 0;
+        
+    }
+
+    .seccion-aside-responsive {
+        width: 100%;
+        height: 100%;
+        max-width: 270px;
+        padding: 40px 20px;
+        right: 0;
+        top: 0;
+        background-color: #fff;
+        color: black;
+        font-family: "Quicksand";
+        position: fixed;
+        transform: translate(100%);
+        z-index: 500;
+        transition: 0.5s;
+        margin: 0;
+    }
+
+    .producto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        padding: 10px;
+        
+    }
+
+
     .boton-gris-cuadro-vaciar, .boton-rojo-cuadro-vaciar {
         width: 150px;
+    }
+
+    .seccion-aside {
+        display: none;
+    }
+
+    .boton-responsive-filtro {
+        display: flex;
+    }
+
+    .view-buttons {
+        display: none;
+    }
+
+    .boton-filtro {
+        display: flex;
+    }
+
+    .fa-filter {
+        margin: 0;
+        padding: 0;
+    }
+
+    .texto-filters-responsive {
+        font-family: "Quicksand";
+        font-size: 16px;
+        margin: 0;
+    }
+
+    .mostrar-seccion-aside-responsive {
+        transform: translate(0);
     }
 }
