--- a/style.css
+++ b/style.css
@@ -267,7 +267,6 @@ html {
 
 .resumen-y-contenedor-datos-personales-y-pago {
     display: flex;
-    min-height: 300px;
 }
 
 .contenedor-botones-opciones-pago {
@@ -289,7 +288,6 @@ html {
     background: #f5f5f5;
     border-radius: 5px;
     min-width: 300px;
-    min-height: 400px;
     padding: 20px;
     margin: 20px;
 }
@@ -400,6 +398,19 @@ html {
     background-color: rgba(185, 182, 182, 0.521);
 }
 
+.boton-gris-cuadro-seguir {
+    background-color: #f5f5f5;
+    color: black;
+    width: 200px;
+    min-height: 50px;
+    border: 0;
+    border-radius: 5px;
+    font-family: "Quicksand";
+}
+
+.boton-gris-cuadro-seguir:hover {
+    background-color: rgba(185, 182, 182, 0.521);
+}
 
 .contenedor-botones-cuadro-vaciar {
     display: flex;
@@ -617,6 +628,8 @@ button {
 .button:hover {
     background-color: #e9e7e7;
 }
+
+
   
 /* Comienza footer */
  
@@ -677,6 +690,9 @@ ul {
 
 
 
+
+
+
 /* Clase para JS */
 
 .no-mostrar {
@@ -704,6 +720,7 @@ ul {
 
 
 @media (max-width: 576px) {
+    
 
     .seccion-aside {
         display: none;
@@ -821,12 +838,53 @@ ul {
         left: 0;
         right: 0;
         max-width: 100%;
+        position: initial;
+    }
+
+    .resumen-y-contenedor-datos-personales-y-pago {
+        display: inline-block;
+    }
+
+    .botones-footer-cuadro-comprar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 30px;
+    }
+
+    .boton-gris-cuadro-seguir {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        margin-top: 20px;
+    }
+    
+    .boton-enviar-formulario {
+        padding: 0;
+        width: 100%;
+        margin: 0;
+        margin-top: 10px;
+    }
+
+    .formulario-enviar {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .boton-gris-cuadro-vaciar, .boton-rojo-cuadro-vaciar {
         width: 150px;
     }
 
+    .botones-footer-cuadro-comprar {
+        padding: 0;
+        margin: 0;
+    }
+
+   
     #buscar-productos-responsive {
         cursor: text;
         border: none;
@@ -848,10 +906,68 @@ ul {
 
 
 @media (min-width: 577px) and (max-width: 767.98px) {
+
     .cuadro-comprar {
+        width: 100%;
+        height: 100%;
+        padding: 40px 20px;
+        right: 0;
+        top: 0;
         left: 0;
         right: 0;
         max-width: 100%;
+        background-color: #fff;
+        color: black;
+        font-family: "Quicksand";
+        position: fixed;
+        transform: translate(50%);
+        z-index: 500;
+        margin: 0;
+    }
+
+    .resumen {
+        max-width: 300px;
+        width: 100%;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .resumen-y-contenedor-datos-personales-y-pago {
+        display: inline-block;
+    }
+
+    .botones-footer-cuadro-comprar {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 0;
+        margin-top: 30px;
+    }
+
+    .boton-gris-cuadro-seguir {
+        width: 150px;
+        padding: 0;
+        margin: 0;
+    
+    }
+    
+    .boton-enviar-formulario {
+        padding: 0;
+        width: 150px;
+        margin: 0;
+        margin-left: 10px;
+  
+    }
+
+    .formulario-enviar {
+  
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .boton-gris-cuadro-vaciar, .boton-rojo-cuadro-vaciar {
+        width: 150px;
     }
 
     .contenedor-botones-aside-responsive-1 {
@@ -982,4 +1098,74 @@ ul {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
 
+
+    .cuadro-comprar {
+        width: 100%;
+        height: 100%;
+        padding: 40px 20px;
+        right: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        max-width: 100%;
+        background-color: #fff;
+        color: black;
+        font-family: "Quicksand";
+        position: fixed;
+        transform: translate(50%);
+        z-index: 500;
+        margin: 0;
+    }
+
+    .resumen {
+        max-width: 300px;
+        width: 100%;
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+
+    .resumen-y-contenedor-datos-personales-y-pago {
+        display: inline-block;
+    }
+
+    .botones-footer-cuadro-comprar {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 0;
+        margin-top: 30px;
+        margin-left: 20px;
+    }
+
+    .boton-gris-cuadro-seguir {
+        width: 150px;
+        padding: 0;
+        margin: 0;
+    
+    }
+    
+    .boton-enviar-formulario {
+        padding: 0;
+        width: 150px;
+        margin: 0;
+        margin-left: 10px;
+  
+    }
+
+    .formulario-enviar {
+  
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    
+
+}
+
+@media (min-width: 992px) {
+
+    .seccion-aside-responsive {
+        display: none;
+    }
 }
