--- a/style.css
+++ b/style.css
@@ -1098,6 +1098,9 @@ ul {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
 
+    .seccion-aside-responsive {
+        display: none;
+    }
 
     .cuadro-comprar {
         width: 100%;
