--- a/style.css
+++ b/style.css
@@ -721,6 +721,9 @@ ul {
 
 @media (max-width: 576px) {
     
+    .no-scroll {
+        overflow: scroll;
+    }
 
     .seccion-aside {
         display: none;
