--- a/style.css
+++ b/style.css
@@ -910,6 +910,12 @@ ul {
 
 @media (min-width: 577px) and (max-width: 767.98px) {
 
+
+    .no-scroll {
+        overflow: scroll;
+    }
+
+    
     .cuadro-comprar {
         width: 100%;
         height: 100%;
