--- a/style.css
+++ b/style.css
@@ -1014,7 +1014,9 @@ ul {
     }
 
     .carrito {
+
         overflow: scroll;
+
     }
     
     .overlay-seccion-aside-responsive {
@@ -1190,6 +1192,11 @@ ul {
         align-items: center;
     }
 
+    .carrito {
+        
+        overflow: scroll;
+
+    }
     
 
 }
